<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            app:srcCompat="@color/colorPrimaryDark" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/imbtn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="@color/colorPrimaryDark"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:tint="@color/softyellow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/previous" />

                <TextView
                    android:id="@+id/tv_titleweigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sweighTitle"
                    android:textColor="@color/softyellow"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imbtn_back"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/imbtn_addPat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/contacts" />

                <ImageButton
                    android:id="@+id/imbtn_batt"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@+id/imbtn_setting"
                    app:layout_constraintHorizontal_bias="0.992"
                    app:layout_constraintStart_toEndOf="@+id/tv_titleweigh"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/battery_full" />

                <ImageButton
                    android:id="@+id/imbtn_setting"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/settings" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/spinner_patient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLastWeigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/sLastWeigh"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="226dp" />

            <EditText
                android:id="@+id/et_lastweigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="250dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_weightDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/sLastWDate"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_dateW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_currentwheigh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/scurrentwheigh"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_currentwheigh">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pad 1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wheighmes"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/grey2"
                android:fontFamily="monospace"
                android:text="..."
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="614dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pad 3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wheighmes_3"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/grey2"
                android:fontFamily="monospace"
                android:text="..."
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="614dp" />
        </LinearLayout>

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pad 2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wheighmes_2"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/grey2"
                android:fontFamily="monospace"
                android:text="..."
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="614dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pad 4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wheighmes_4"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/grey2"
                android:fontFamily="monospace"
                android:text="..."
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="614dp" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imbt_weighing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:srcCompat="@drawable/weight" />

    <Button
        android:id="@+id/btn_tar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:text="@string/sTar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <TextView
        android:id="@+id/tv_wheighmes_final"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="120dp"
        android:background="@color/grey2"
        android:fontFamily="monospace"
        android:text="..."
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <TextView
        android:id="@+id/tv_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="kg"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wheighmes_final"
        app:layout_constraintEnd_toEndOf="@+id/tv_wheighmes_final"
        app:layout_constraintTop_toTopOf="@+id/tv_wheighmes_final" />

    <TextView
        android:id="@+id/tv_pati_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sglobalInfo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/spinner_patient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pati_info" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/btn_tar"
        app:layout_constraintTop_toBottomOf="@+id/btn_tar" />

</android.support.constraint.ConstraintLayout>